# actix-fb-google-login

./: .env  Cargo.toml  LICENSE  README.md
google-jwt-verify/: .gitignore  .travis.yml  Cargo.toml  README.md
google-jwt-verify/src/: algorithm.rs  async_client.rs  client.rs  error.rs  header.rs  jwk.rs  key_provider.rs  lib.rs  test.rs  token.rs  unverified_token.rs
migrations/: 20201223014903_with_data.sql
src/: auth.rs  main.rs
src/errors/: mod.rs
src/quality/: model.rs  routes.rs
src/redis/: util.rs
src/signs/: model.rs  routes.rs
src/todo/: model.rs
src/user/: model.rs  routes.rs
src/votes/: model.rs  routes.rs
