[package]
name = "astrolytic"
version = "0.1.0"
authors = ["jaspalbhamra"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
systemfd = "0.3.0"
actix = "0.10.0"
actix-rt = "2.1.0"
actix-web = "3.3.2"
actix-ratelimit = "0.3.1"
actix-web-httpauth = "0.5.0"
actix-http = "2.2.0"
actix-redis = "0.9.1"
redis-async = "0.6.3"
#actix-session = "0.4.0"
actix-cors = "0.5.4"
config = "0.10.1" 
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
eyre = "0.6.2"
color-eyre = "0.5.6"
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-log = { version = "0.1", features = ["env_logger"]}
tracing-subscriber = "0.2.14"
sqlx = { version = "0.4.2", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "json"]}
uuid = { version = "0.8", features = ["serde"]}
chrono = { version = "0.4.19", features = ["serde"]}
# google-jwt-verify = { version = "0.3.0", features = ["async"]}
log = "0.4.11"
anyhow = "1.0.34"
futures = "0.3.7"
serde_json = "1.0.64"
listenfd = "0.3.3"
env_logger = "0.8.1"
strum = "0.19"
strum_macros = "0.19" 
futures-util = "0.3.13"
reqwest = "0.10.9"


google-jwt-verify = { path = "google-jwt-verify", features = ["async"]}